fazzk-tauri/src-tauri/build_error_utf8.txt
cargo :     Checking 
fazzk-tauri v0.1.0 (C
:\Users\minse\Desktop
\fazzk-dev\fazzk-taur
i\src-tauri)
위치 줄:1 문자:1
+ cargo check 2> buil
d_error_safe.txt
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking fa...auri\    
src-tauri):Strin    g
) [], RemoteExc    ep
tion
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
error[E0433]: failed 
to resolve: use of un
resolved module or un
linked crate `chzzk`
   --> src\server.rs:
135:15
    |
135 |         match c
hzzk::get_followers(&
cookies, &hash).await
 {
    |               ^
^^^^ use of unresolve
d module or unlinked 
crate `chzzk`
    |
help: to make use of 
source file src\chzzk
.rs, use `mod chzzk` 
in this file to decla
re the module
   --> src\lib.rs:1:1
    |
  1 + mod chzzk;
    |
help: consider import
ing this module
    |
  1 + use crate::chzz
k;
    |

warning: unused impor
ts: `Response` and `h
eader`
 --> src\server.rs:3:
30
  |
3 |     response::{In
toResponse, Response,
 Html},
  |                  
            ^^^^^^^^
...
6 |     http::{Method
, StatusCode, header}
,
  |                  
              ^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of `#[warn(unused)]`)
 on by default

warning: unused impor
t: `tauri_plugin_shel
l::ShellExt`
  --> src\lib.rs:12:9
   |
12 |     use tauri_pl
ugin_shell::ShellExt;
   |         ^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused impor
t: `Manager`
  --> src\server.rs:1
0:24
   |
10 | use tauri::{AppH
andle, Manager, Emitt
er};
   |                 
       ^^^^^^^

warning: unused impor
t: `tauri::Manager`
 --> src\lib.rs:5:5
  |
5 | use tauri::Manage
r;
  |     ^^^^^^^^^^^^^
^

warning: unused varia
ble: `app`
  --> src\lib.rs:10:1
6
   |
10 | fn start_login(a
pp: tauri::AppHandle)
 {
   |                ^
^^ help: if this is i
ntentional, prefix it
 with an underscore: 
`_app`
   |
   = note: `#[warn(un
used_variables)]` (pa
rt of `#[warn(unused)
]`) on by default

For more information 
about this error, try
 `rustc --explain E04
33`.
warning: `fazzk-tauri
` (lib) generated 5 w
arnings
error: could not comp
ile `fazzk-tauri` (li
b) due to 1 previous 
error; 5 warnings emi
tted
